# projectDash

./: .gitignore  AGENTS.md  CLAUDE.md  EXPANSION.md  PORTFOLIO_VISION.md  PRD.md  README.md  ROADMAP.md  projectdash.config.example.json  pyproject.toml
.projectdash/: layouts.json
.projectdash/comments/: PROJ-234.md  PROJ-243.md  PROJ-245.md  PROJ-246-B.md  PROJ-251.md
docs/: IA_SPEC.md  IMPLEMENTATION_CHECKLIST.md  INTERACTION_CONTRACT.md  PRD.md  ROADMAP.md
src/projectdash/: app.py  cli.py  config.py  data.py  database.py  dev.py  enums.py  env.py  errors.py  github.py  layout.py  linear.py  models.py  projectdash.tcss
src/projectdash/charts/: __init__.py  line.py
src/projectdash/connectors/: __init__.py  base.py  github_connector.py  linear_connector.py
src/projectdash/services/: __init__.py  github_mutation_service.py  metrics.py  (+5 more)
tests/: test_agent_dispatch.py  test_app_navigation.py  test_cli.py  test_config.py  test_data_manager.py  test_data_manager_github.py  test_data_manager_integration.py  test_database_expansion.py  test_github_client.py  test_github_connector_mapper.py  test_github_dashboard_view.py  test_issue_actions.py  test_issue_detail_screen.py  test_issue_flow.py  test_layout_actions.py  test_layout_customization.py  test_line_chart_renderer.py  test_linear_client.py  test_linear_connector_mapper.py  test_metrics.py  test_portfolio_db_and_metrics.py  test_portfolio_scanner.py  test_slate1_github_actions.py  test_sprint_board_view.py  test_sprint_issue_view.py  test_sync_history_screen.py  test_sync_history_view.py  test_view_modes.py
(+21 files in other folders)
